fix(material/radio): add high contrast focus indication (#22145)
* Adds focus indication in high contrast mode to the non-MDC radio button.
* Makes the focus indication on the MDC radio button more prominent.

--- a/src/material-experimental/mdc-radio/radio.scss
+++ b/src/material-experimental/mdc-radio/radio.scss
@@ -25,7 +25,12 @@
 // how IE/Edge treat native radio buttons in high contrast mode. We can't turn the border
 // into a dotted one, because it's too thick which causes the circles to look off.
 @include a11y.high-contrast {
-  .mat-mdc-radio-button.cdk-keyboard-focused .mat-radio-ripple {
-    outline: dotted 1px;
+  .mat-mdc-radio-button:not(.mat-radio-disabled) {
+    &.cdk-keyboard-focused,
+    &.cdk-program-focused {
+      .mat-radio-ripple {
+        outline: solid 3px;
+      }
+    }
   }
 }
